Version 6.0 alpha: (26 Jul 2004)
	* plugins/rss.pl:
	  - Added natural language data for getting RSS feeds. (Vincent Gevers)
	  - Added expire option, which determines how often the plugin wants to
	    fetch RSS updates.  Unset, it defaults to 1 hour. (Vincent Gevers)
	* plugins/nlp.pl:
	  - Added an event, event_plugin_nlp_call to allow plugins to specify
	    which function to call, instead of hardcoding it to try nlp_match
	    in the plugin's namespace.

Version 6.0 alpha: (25 Jul 2004)
	* plugins/services.dalnet.pl:
	  - New services plugin designed to function with DALnet's chanserv.
	    (Vincent Gevers)
	* plugins/services.chanserv.pl:
	  - New services plugin designed to work with a more generic
	    chanserv-based IRC network.  (Vincent Gevers)

Version 6.0 alpha: (21 Jul 2004)
	* simbot.pl:
	  - Added numberize function which converts written out numbers like
	    "two thousand" into digits, like 2000.
	  - The %help command works again, instead of calling the %stats
	    function.
	* plugins/nlp.pl:
	  - We now use the new numberize function, so that natural language
	    parsing can understand numbers more completely.

Version 6.0 alpha: (14 Jul 2004)
	* simbot.pl:
	  - query_userhost_mask can now be used by plugins to watch for
	    important user@host configurations and modify them instead of
	    normal processing.

Version 6.0 alpha: (13 Jul 2004)
	* plugins/dict.pl:
	  - %define_private command is gone, replaced with a parameter to the
	    normal command.
	  - Relatively short definitions can now be forced to display in the
	    channel with "%define word publicly", but long definitions will
	    still insist upon appearing privately.

Version 6.0 alpha: (11 Jul 2004)
	* plugins/rss.pl:
	  - The RSS plugin no longer downloads feeds that aren't being
	    announced every hour/on load, instead it downloads them as
	    needed.

Version 6.0 alpha: (10 Jul 2004)
	* simbot.pl:
	   - SimBot now caches hostmasks for users when they enter the channel